# agi-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  agi-llm-integration.patch  docker-compose.yml  podman-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy.yml  pr-checks.yml
config/agents/: analysis_agent.yaml  execution_agent.yaml  planning_agent.yaml  research_agent.yaml  review_agent.yaml  writing_agent.yaml
config/environments/: base.py  development.py  production.py
config/tools/: tool_config.yaml
docs/api/: README.md
docs/deployment/: README.md
docs/user-guides/: README.md
infrastructure/docker/: Dockerfile.agents  Dockerfile.api
infrastructure/kubernetes/: deployment.yaml  namespace.yaml  service.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
scripts/: start_dev.sh
scripts/deployment/: deploy.sh
scripts/maintenance/: cleanup.sh
scripts/monitoring/: health_check.py
src/: __init__.py  config.py  logging_config.py
src/agents/: agent_factory.py  analysis_agent.py  base_agent.py  coding_agent.py  kally_agent.py  planning_agent.py  research_agent.py  review_agent.py  summarization_agent.py  writing_agent.py
src/api/: main.py
src/auth/: __init__.py  jwt_manager.py  key_store.py
src/cde/: __init__.py  cde_agent.py  cde_environment.py  cde_manager.py
src/crew/: __init__.py  langgraph_orchestrator.py  orchestrator.py
tests/: __init__.py  conftest.py
(+96 files in other folders)
